website/versioned_docs/version-0.1.0/security/infrastructure/rbac.md
---
title: RBAC Architecture
hide_title: true
pageType: concept
journey: security
description: How the provisioner and controller identities stay separate, narrow, and mutation-locked across tenant onboarding and workload reconciliation.
---

<PageHeader
  title="Keep the identity that grants access separate from the identity that uses it."
  lede="The operator's RBAC model is built around a split-controller design. The provisioner introduces tenant access and namespace guardrails, while the controller consumes tenant-scoped permissions to manage workloads. Neither long-running identity should be able to do both jobs."
/>



<DiagramFrame
  title="Split-controller RBAC model"
  caption="The provisioner creates the tenant `Role` and `RoleBinding`, but the binding points at the controller ServiceAccount rather than granting those permissions back to the provisioner."
  code={`flowchart TB
    subgraph OperatorNS ["Operator namespace"]
        Prov["Provisioner ServiceAccount"]
        Ctrl["Controller ServiceAccount"]
    end

    subgraph TenantNS ["Tenant namespace"]
        TenantRole["Tenant Role"]
        TenantBinding["Tenant RoleBinding"]
        PodDiscoveryRBAC["Per-cluster pod-discovery Role / RoleBinding"]
        Workload["StatefulSet / Pods / Services"]
    end

    subgraph Guardrails ["Admission guardrails"]
        ProvRBAC["Provisioner RBAC policy"]
        ProvNS["Provisioner namespace policy"]
        CtrlRBAC["Controller RBAC policy"]
        CtrlSA["Controller ServiceAccount policy"]
        CtrlSecret["Controller Secret-write policy"]
    end

    Prov --> TenantRole
    Prov --> TenantBinding
    TenantBinding -. binds role .-> TenantRole
    TenantBinding -. binds subject .-> Ctrl
    Prov -. constrained by .-> ProvRBAC
    Prov -. constrained by .-> ProvNS

    Ctrl --> Workload
    Ctrl --> PodDiscoveryRBAC
    Ctrl -. constrained by .-> CtrlRBAC
    Ctrl -. constrained by .-> CtrlSA
    Ctrl -. constrained by .-> CtrlSecret

    classDef read fill:transparent,stroke:#79c0ab,stroke-width:2px,color:#e6f4ef;
    classDef process fill:transparent,stroke:#fdd0a4,stroke-width:2px,color:#e6f4ef;
    classDef write fill:transparent,stroke:#87d6be,stroke-width:2px,color:#e6f4ef;

    class Prov,Ctrl process;
    class TenantRole,TenantBinding,PodDiscoveryRBAC,Workload write;
    class ProvRBAC,ProvNS,CtrlRBAC,CtrlSA,CtrlSecret read;`}
/>

<Callout type="note" title="Projected Kubernetes API tokens">

The operator disables default token auto-mounting and uses explicit projected ServiceAccount tokens for Kubernetes API access. Audience pinning can be configured, but the important contract here is that API identity stays explicit and short-lived rather than inherited implicitly.

</Callout>

<DecisionTable
  title="Identity split at a glance"
  columns={['Identity', 'Primary job', 'What it must not become']}
  rows={[
    {
      cells: [
        'Provisioner',
        'Introduce tenant namespaces, bind tenant-scoped RBAC, and apply day-0 guardrails.',
        'A long-running identity that can read tenant Secrets or manage tenant workloads.',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'Controller',
        'Reconcile `OpenBaoCluster` workloads and day-1/day-2 lifecycle actions inside onboarded namespaces.',
        'An identity that can discover arbitrary namespaces or rewrite the RBAC that grants its own access.',
      ],
    },
  ]}
/>

## Provisioner access model

<DecisionTable
  kind="reference"
  title="Provisioner scope"
  columns={['Resource or action', 'Why it exists', 'Why it stays narrow']}
  rows={[
    {
      cells: [
        'Watch `OpenBaoTenant`',
        'Tenant onboarding is the trigger for introducing namespace access.',
        'It is the only cluster-wide watch the provisioner needs for tenant onboarding.',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'Patch Namespaces for fixed PSS labels',
        'Tenant namespaces must be hardened as part of onboarding.',
        'Namespace mutation is limited to the fixed Pod Security label set and blocked in system namespaces.',
      ],
    },
    {
      cells: [
        'Create and patch fixed `Role` and `RoleBinding` objects',
        'The provisioner must bind the controller into the target namespace.',
        'Admission policy constrains names, subjects, verbs, and object shapes so this cannot expand into arbitrary RBAC minting.',
      ],
    },
    {
      cells: [
        'Create tenant guardrails such as `ResourceQuota` and `LimitRange`',
        'Day-0 governance belongs to provisioning, not to workload reconciliation.',
        'The provisioner manages only the operator-owned fixed objects and does not treat these resources as general namespace inventory.',
      ],
    },
  ]}
/>

<Callout type="note" title="Blind-write pattern">

The provisioner writes the RBAC that grants the controller access, but it does not grant itself those permissions. That is the core security property of the onboarding path.

</Callout>

## Controller access model

<DecisionTable
  kind="reference"
  title="Controller scope"
  columns={['Resource or action', 'Why it exists', 'Why it stays narrow']}
  rows={[
    {
      cells: [
        'Watch `OpenBaoCluster`',
        'The controller needs the global CRD event stream to reconcile clusters.',
        'This does not imply namespace discovery or broad tenant access by itself.',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'Manage tenant-scoped workload resources',
        'StatefulSets, Services, ConfigMaps, Jobs, and related resources are the normal lifecycle surface.',
        'This access only exists where the provisioner already introduced the controller via RoleBinding.',
      ],
    },
    {
      cells: [
        'Read and write allowlisted Secrets',
        'Lifecycle workflows need specific Secret names for bootstrap, TLS, and operations.',
        'Secret access is fixed-name, non-enumerating, and guarded by dedicated admission policy.',
      ],
    },
    {
      cells: [
        'Create minimal per-cluster `Role` and `RoleBinding` objects',
        'Some service-registration and pod-discovery flows need narrow additional RBAC.',
        'The controller policy only allows a tightly scoped pattern to prevent RBAC self-escalation.',
      ],
    },
    {
      cells: [
        'Create operator-managed ServiceAccounts for workload and jobs',
        'Backup, restore, and upgrade paths need explicit job identities.',
        'Admission policy constrains names and shapes so the controller cannot mutate unrelated ServiceAccounts.',
      ],
    },
  ]}
/>

## What the RBAC model guarantees

<DecisionTable
  title="Security properties"
  columns={['Property', 'What it means operationally', 'Primary control']}
  rows={[
    {
      cells: [
        'No topology discovery',
        'The controller is not supposed to list namespaces and infer who else exists in the cluster.',
        'Provisioner-led namespace introduction and narrow cluster-scope reads.',
      ],
      emphasis: 'recommended',
    },
    {
      cells: [
        'No Secret enumeration',
        'Operator identities should not browse tenant Secrets as generic inventory.',
        'Name-scoped Secret roles and the controller Secret-write policy.',
      ],
    },
    {
      cells: [
        'Privilege separation',
        'The identity that grants access is not the identity that consumes it.',
        'Split provisioner/controller model plus admission guardrails.',
      ],
    },
    {
      cells: [
        'Blind-create, name-scoped mutate',
        'The operator can create the Secrets it owns without broadening into arbitrary tenant Secret mutation.',
        'Dedicated Secret roles and fixed-name admission constraints.',
      ],
    },
  ]}
/>

<Callout type="warning" title="Unsafe mode weakens the model">

Installing with admission policies disabled materially weakens the RBAC defense-in-depth story. The split-controller design still matters, but without the admission guardrails a broader or drifted RBAC grant has fewer backstops.

</Callout>

<NextActions
  title="Continue platform controls"
  items={[
    {
      label: 'Admission policies',
      description: 'See how RBAC writes and managed-resource mutations are constrained at the API boundary.',
      docId: 'security/infrastructure/admission-policies',
    },
    {
      label: 'Network security',
      description: 'Review the default-deny network posture that complements these identity boundaries.',
      docId: 'security/infrastructure/network-security',
    },
    {
      label: 'Tenant isolation',
      description: 'Connect the RBAC model back to the multi-tenant operating guarantees.',
      docId: 'security/multi-tenancy/tenant-isolation',
    },
  ]}
/>
